cmake_minimum_required(VERSION 3.14)
project(C_Programming C)

set(CMAKE_C_STANDARD 90)
add_subdirectory(02CFundamentals)
add_subdirectory(03Formatted_Input_Output)
add_subdirectory(04Expressions)
add_subdirectory(05Selection_Statements)
add_subdirectory(06Loops)
add_subdirectory(07Basic_Types)
add_subdirectory(08Arrays)
add_subdirectory(09Functions)
add_subdirectory(10Program_Organization)
add_subdirectory(11Pointers)
add_subdirectory(12Pointers_And_Arrays)
add_subdirectory(13Strings)
add_subdirectory(14Preprocessor)
add_subdirectory(15Writing_Large_Programs)
#add_subdirectory(16Structures Union Enum)
#add_subdirectory(17Advanced Pointers)
#add_subdirectory(18Declarations)
#add_subdirectory(19Programming)
#add_subdirectory(20Low-level Programming)
#add_subdirectory(22IO)
add_subdirectory(24ErrorHandling)

add_subdirectory(26Miscellaneous_Library_Functions)
add_subdirectory(30SecretLifeOfPrograms)